--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ricardo Hofstetter Dias - Desenvolvedor Frontend</title>
+  <title>José Kaio - Desenvolvedor Frontend</title>
 
   <link rel="stylesheet" href="src/css/font-awesome.css" />
   <link rel="stylesheet" href="src/css/reset.css" />
@@ -28,7 +28,7 @@
     <div class="container">
       <div class="row justify-content-between alinhar-itens-no-centro">
         <a href="#">
-          <h1 class="logo">RD</h1>
+          <h1 class="logo">JK</h1>
         </a>
         <nav>
           <input id="menu-hamburguer" type="checkbox" />
@@ -53,20 +53,20 @@
       <div class="row full-screen alinhar-itens-no-centro">
         <div class="texto-home">
           <p>Olá 🖖,</p>
-          <h1>Sou o Ricardo Dias</h1>
-          <h2>Desenvolvedor Frontend</h2>
+          <h1>Sou o José Kaio</h1>
+          <h2>Desenvolvedor Frontend Júnior</h2>
 
           <div class="redes-sociais">
-            <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/jos%C3%A9-kaio-a3b3a6274/" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
+            <a target="_blank" href="https://wa.link/jt7kqw" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
+            <a target="_blank" href="https://github.com/879372" class="outer-shadow"><i class="fab fa-github"></i></a>
+            <a target="_blank" href="https://www.instagram.com/kaio.bezerra1/" class="outer-shadow"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
 
         <div class="img-home">
           <div class="img-box inner-shadow">
-            <img class="outer-shadow" src="src/imagens/foto-perfil.png" alt="foto do perfil do Ricardo" />
+            <img class="outer-shadow" src="src/imagens/SAVE_20210825_140618.jpg" alt="foto do perfil do Kaio" />
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@
       <div class="row">
         <div class="imagem-sobre-mim">
           <div class="img-box inner-shadow">
-            <img src="src/imagens/foto-perfil.png" alt="foto sobre mim" class="outer-shadow" />
+            <img src="src/imagens/minha foto.PNG" alt="foto sobre mim" class="outer-shadow" />
           </div>
         </div>
         <div class="informacoes-sobre-mim">
@@ -180,47 +180,60 @@
 
       <div class="container-projetos">
         <div class="projeto">        
-          <a href="https://github.com">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
-            <h3>Projeto 1</h3>
+            <img src="src/imagens/inspiri-se-fotografias.netlify.app_ (2).png" alt="Nome do projeto" />
+            <h3>Landing Page</h3>
             <div class="informacoes-projeto">          
-              <p>Projeto feito usando HTML, CSS e JavaScript</p>
-              <p>🔗 Ver no GitHub Pages</p>
-            </div>     
-          </a>
+              <p>Projeto feito utilizando HTML e CSS.</p></br>
+              <a href="https://879372.github.io/inspirise-fotografia/" target="_blank">
+                <p>🔗 GitHub Pages</p>
+              </a>
+              <a href="https://github.com/879372/inspirise-fotografia" target="_blank">
+                <p>🔗 Repositório</p>
+              </a>
+            </div> 
         </div>
 
         <div class="projeto">        
-          <a href="https://github.com">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
-            <h3>Projeto 2</h3>
+            <img src="src/imagens/879372.github.io_validacao-forms_.png" alt="Nome do projeto" />
+            <h3>Validation Form</h3>
             <div class="informacoes-projeto">          
-              <p>Lorem ipsum</p>
-              <p>🔗 Ver no GitHub Pages</p>
-            </div>      
-          </a>          
+              <p>Projeto feito utilizando HTML, CSS e JavaScript.</p></br>
+              <a href="https://879372.github.io/validacao-forms/" target="_blank">
+                <p>🔗 GitHub Pages</p>
+              </a>
+              <a href="https://github.com/879372/validacao-forms" target="_blank">
+                <p>🔗 Repositório</p>
+              </a>
+            </div>     
         </div>
 
         <div class="projeto">     
-          <a href="https://github.com">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
-            <h3>Projeto 3</h3>
-            <div class="informacoes-projeto">
-              <p>Lorem ipsum</p>
-              <p>🔗 Ver no GitHub Pages</p>
-            </div>
-          </a>   
+            <img src="src/imagens/geradordeconselhos_.png" alt="Nome do projeto" />
+            <h3>Advice generator</h3>
+            <div class="informacoes-projeto">          
+              <p>Projeto feito utilizando HTML, CSS, JavaScript e API.</p></br>
+              <a href="https://879372.github.io/geradordeconselhos/" target="_blank">
+                <p>🔗 GitHub Pages</p>
+              </a>
+              <a href="https://github.com/879372/geradordeconselhos" target="_blank">
+                <p>🔗 Repositório</p>
+              </a>
+            </div> 
         </div>
 
         <div class="projeto">
-          <a href="https://github.com">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
-            <h3>Projeto 4</h3>
-            <div class="informacoes-projeto">
-              <p>Lorem ipsum</p>
-              <p>🔗 Ver no GitHub Pages</p>
-            </div>
-          </a>
+            <img src="src/imagens/879372.github.io_projeto-github-api_.png" alt="Nome do projeto" />
+            <h3>GitHub API</h3>
+            <div class="informacoes-projeto">          
+              <p>Projeto feito utilizando HTML, CSS, JavaScript, API e React.</p></br>
+              <a href="https://879372.github.io/projeto-github-api/" target="_blank">
+                <p>🔗 GitHub Pages</p>
+              </a>
+              <a href="https://github.com/879372/projeto-github-api" target="_blank">
+                <p>🔗 Repositório</p></br>
+              </a>
+              <p>Em conclusão...</p>
+            </div> 
         </div>
       </div>
     </div>
@@ -230,10 +243,10 @@
     <div class="container">
       <h2>Me envie uma mensagem!</h2>
       <div class="redes-sociais">
-        <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
-        <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
-        <a href="#" class="outer-shadow"><i class="fab fa-instagram"></i></a>
+        <a target="_blank" href="https://www.linkedin.com/in/jos%C3%A9-kaio-a3b3a6274/" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
+        <a target="_blank" href="https://wa.link/jt7kqw" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
+        <a target="_blank" href="https://github.com/879372" class="outer-shadow"><i class="fab fa-github"></i></a>
+        <a target="_blank" href="https://www.instagram.com/kaio.bezerra1/" class="outer-shadow"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
   </footer>
