--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </p>
 
           <div class="botoes">
-            <a target="_blank" href="https://www.canva.com/design/DAFhiLoLmCw/hTk3wWBAzwq9sNBm8cDLeQ/edit?utm_content=DAFhiLoLmCw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" class="botao outer-shadow">Veja meu CV</a>
+            <a target="_blank" href="src/imagens/Front-End Júnior.pdf" class="botao outer-shadow">Veja meu CV</a>
           </div>
         </div>
       </div>
