alterar curriculo e projeto

--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
       <div class="container-projetos">
         <div class="projeto">        
             <img src="src/imagens/inspiri-se-fotografias.netlify.app_ (2).png" alt="Nome do projeto" />
-            <h3>Landing Page</h3>
+            <h3>Smart Atendimento</h3>
             <div class="informacoes-projeto">          
-              <p>Projeto feito utilizando HTML e CSS.</p></br>
-              <a href="https://879372.github.io/inspirise-fotografia/" target="_blank">
+              <p>Projeto feito utilizando HTML, CSS e JavaScript.</p></br>
+              <a href="https://879372.github.io/smart-atendimentoteste/" target="_blank">
                 <p>🔗 GitHub Pages</p>
               </a>
-              <a href="https://github.com/879372/inspirise-fotografia" target="_blank">
+              <a href="https://github.com/879372/smart-atendimentoteste" target="_blank">
                 <p>🔗 Repositório</p>
               </a>
             </div> 
