--- a/index.html
+++ b/index.html
@@ -144,9 +144,16 @@
         
         <div class="informacoes github">
           <div class="logo">
-            <i class="devicon devicon-mysql-plain"></i>          
+            <i class="devicon devicon-typescript-plain"></i>          
           </div>
-          <h3>Mysql e Firebird</h3>
+          <h3>Typescript</h3>
+        </div>
+
+        <div class="informacoes github">
+          <div class="logo">
+            <i class="devicon devicon-nextjs-plain"></i>          
+          </div>
+          <h3>Next.Js</h3>
         </div>
 
         <div class="informacoes github">
@@ -158,16 +165,9 @@
 
         <div class="informacoes github">
           <div class="logo">
-            <i class="devicon devicon-pandas-plain"></i>          
+            <i class="devicon-mysql-plain"></i>
           </div>
-          <h3>Pandas</h3>
-        </div>
-
-        <div class="informacoes github">
-          <div class="logo">
-            <i class="devicon-plotly-plain"></i>
-          </div>
-          <h3>Dash Plotly</h3>
+          <h3>Mysql</h3>
         </div>
 
         <div class="informacoes github">
@@ -196,56 +196,29 @@
       </div>
 
       <div class="container-projetos">
-        <div class="projeto">        
-            <img src="src/imagens/smart-atendimento.PNG" alt="Nome do projeto" />
-            <h3>Smart Atendimento</h3>
-            <div class="informacoes-projeto">          
-              <p>Desenvolvido com as tecnologias HTML, CSS e JavaScript. Plataforma por assinatura de atendimento ao cliente.</p></br>
-              <a href="https://879372.github.io/smart-atendimentoteste/" target="_blank">
-                <p>🔗 Deploy</p>
-              </a>
-              <a href="https://github.com/879372/smart-atendimentoteste" target="_blank">
-                <p>🔗 Repositório</p>
-              </a>
-            </div> 
-        </div>
-
-        <div class="projeto">        
-            <img src="src/imagens/modapay.PNG" alt="Nome do projeto" />
-            <h3>ModaPAY</h3>
-            <div class="informacoes-projeto">          
-              <p>Foram feitas alterações nesse layout com as tecnologias HTML, CSS e JavaScript. Site de processadora de pagamento via pix.
-                Obs: API documentada por mim. Clicar no Botão 'Documentação API' para acessar a api no Gitbook
-              </p></br>
-              <a href="https://modapay.com.br" target="_blank">
-                <p>🔗 Deploy</p>
-              </a>
-            </div>     
-        </div>
-
         <div class="projeto">     
-            <img src="src/imagens/conselho.PNG" alt="Nome do projeto" />
-            <h3>Gerador de Conselhos API</h3>
+            <img src="src/imagens/nextmodapay.png" alt="Nome do projeto" />
+            <h3>Painel Administrativo Modabank</h3>
             <div class="informacoes-projeto">          
-              <p>Desenvolvido com as tecnologias HTML, CSS, JavaScript e a API https://api.adviceslip.com.</p></br>
-              <a href="https://879372.github.io/geradordeconselhos/" target="_blank">
+              <p>Desenvolvido com as tecnologias React, Typescript, Next.Js e Tailwind CSS. Painel administrativo para gerenciar depositos, saques e pagamentos do Modabank</p></br>
+              <a href="https://nextmodapay.vercel.app" target="_blank">
                 <p>🔗 Deploy</p>
               </a>
-              <a href="https://github.com/879372/geradordeconselhos" target="_blank">
+              <a href="https://github.com/879372/nextmodapay" target="_blank">
                 <p>🔗 Repositório</p>
               </a>
             </div> 
         </div>
 
         <div class="projeto">
-            <img src="src/imagens/dashboardmoda.png" alt="Nome do projeto" />
+            <img src="src/imagens/dashboardmodapay.png" alt="Nome do projeto" />
             <h3>DashBoard Modabank</h3>
             <div class="informacoes-projeto">          
-              <p>Desenvolvido com as tecnologias Python e suas libs, pandas, Dash e Plotly. Dashboard da processadora de pagamento pix que monitora, entradas, saidas, taxas das empresas que fizera a integração. A base de dados é o Banco MySql.</p></br>
+              <p>Desenvolvido com as tecnologias Python e suas libs, pandas, Dash e Plotly. Dashboard da processadora de pagamento pix que monitora, entradas, saidas, taxas das empresas que fizeram a integração com a API de pagamentos. A base de dados é o Banco MySql.</p></br>
               <a href="https://dashboard.modapay.com.br" target="_blank">
                 <p>🔗 Deploy</p>
               </a>
-              <a href="#" target="_blank">
+              <a href="https://github.com/879372/dashboardmaster" target="_blank">
                 <p>🔗 Repositório</p></br>
               </a>
             </div> 
