--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a href="#sobre-mim">Sobre mim</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
             <li><a href="#projetos">Meus projetos</a></li>
-            <li><a  target="_blank" href="src/imagens/Desenvolvedor de Software .pdf" >Currículo</a></li>
+            <li><a  target="_blank" href="https://www.canva.com/design/DAFuRzjsyoY/IeEMRlUhvAdpoUP2R6TOMA/edit?utm_content=DAFuRzjsyoY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" >Currículo</a></li>
           </ul>
         </nav>
       </div>
@@ -197,30 +197,30 @@
 
       <div class="container-projetos">
         <div class="projeto">     
-            <img src="src/imagens/nextmodapay.png" alt="Nome do projeto" />
-            <h3>Painel Administrativo Modabank</h3>
+            <img src="src/imagens/modapy.PNG" alt="modapay" />
+            <h3>Painel Administrativo ModaPAY</h3>
             <div class="informacoes-projeto">          
-              <p>Desenvolvido com as tecnologias React, Typescript, Next.Js e Tailwind CSS. Painel administrativo para gerenciar depositos, saques e pagamentos do Modabank</p></br>
-              <a href="https://nextmodapay.vercel.app" target="_blank">
-                <p>🔗 Deploy</p>
+              <p>Interface desenvolvida com as tecnologias React, Typescript, Next.Js e Tailwind CSS. Painel administrativo para gerenciar depositos, saques e pagamentos do Modapay, carteira digital do ModaBank.</p></br>
+              <a href="https://app.modapay.com.br" target="_blank">
+                <p>🔗 Site</p>
               </a>
-              <a href="https://github.com/879372/nextmodapay" target="_blank">
+              <!-- <a href="https://github.com/879372/nextmodapay" target="_blank">
                 <p>🔗 Repositório</p>
-              </a>
+              </a> -->
             </div> 
         </div>
 
         <div class="projeto">
-            <img src="src/imagens/dashboardmodapay.png" alt="Nome do projeto" />
-            <h3>DashBoard Modabank</h3>
+            <img src="src/imagens/raizbet.png" alt="raizbet" />
+            <h3>RaizBet</h3>
             <div class="informacoes-projeto">          
-              <p>Desenvolvido com as tecnologias Python e suas libs, pandas, Dash e Plotly. Dashboard da processadora de pagamento pix que monitora, entradas, saidas, taxas das empresas que fizeram a integração com a API de pagamentos. A base de dados é o Banco MySql.</p></br>
-              <a href="https://dashboard.modapay.com.br" target="_blank">
-                <p>🔗 Deploy</p>
+              <p>Interface desenvolvida com as tecnologias React, Typescript, Next.Js e Tailwind CSS. Plataforma de apostas de cassino online e jogos esportivos.</p></br>
+              <a href="https://raizbet.com" target="_blank">
+                <p>🔗 Site</p>
               </a>
-              <a href="https://github.com/879372/dashboardmaster" target="_blank">
+              <!-- <a href="https://github.com/879372/dashboardmaster" target="_blank">
                 <p>🔗 Repositório</p></br>
-              </a>
+              </a> -->
             </div> 
         </div>
       </div>
