--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
       <div class="container-projetos">
         <div class="projeto">     
-            <img src="src/imagens/modapy.PNG" alt="modapay" />
+            <img src="src/imagens/modapy.png" alt="modapay" />
             <h3>Painel Administrativo ModaPAY</h3>
             <div class="informacoes-projeto">          
               <p>Interface desenvolvida com as tecnologias React, Typescript, Next.Js e Tailwind CSS. Painel administrativo para gerenciar depositos, saques e pagamentos do Modapay, carteira digital do ModaBank.</p></br>
